# text-gen-huggingface

./: .gitignore  app.py  databutton.json  model.py  pyproject.toml
.github/workflows/: deploy-databutton.yaml
notebooks/: test.ipynb
